Fix link alignment in recovery footer

--- a/assets/stylesheets/purple/main.scss
+++ b/assets/stylesheets/purple/main.scss
@@ -146,6 +146,7 @@ h1.logo {
 
     .btn-link {
       font-weight: 200;
+      vertical-align: baseline;
     }
   }
 
